--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-##################################################
-#  PML Reference Manual:                         #
-#  https://github.com/pml-lang/reference-manual  #
-##################################################
-
 /bin
 /output
 /temp
@@ -14,17 +9,9 @@
 **/NOGIT_*
 
 
-## Misc Work Files
-##################
-
-# Temporary/backup or removed files and folders:
-___*
-___*.*
-
-# Links and URLs
-*.lnk
-*.url
-
+############################
+## COMMON IGNORE PATTERNS ##
+############################
 
 ## Apps Local Settings & Temp Files
 ###################################
@@ -32,77 +19,30 @@ ___*.*
 # Chrome's debug logs for local HTML pages:
 debug.log
 
-
-############################
-## COMMON IGNORE PATTERNS ##
-############################
-# Based on ".gitignore" created by:
-# https://www.gitignore.io/api/windows,linux,macos
+# Links and URLs:
+*.lnk
+*.url
 
 ## Linux
 ########
-
 *~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
 .directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
-
-# .nfs files are created when an open file is removed but is still being accessed
+.fuse_hidden*
 .nfs*
+.Trash-*
 
 ## macOS
 ########
-
 *.DS_Store
+._*
 .AppleDouble
 .LSOverride
-
-# Icon must end with two \r
 Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
 
 ## Windows
 ##########
-
-# Windows thumbnail cache files
 Thumbs.db
 ehthumbs.db
 ehthumbs_vista.db
-
-# Folder config file
 Desktop.ini
-
-# Recycle Bin used on file shares
 .BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# End of https://www.gitignore.io/api/windows,linux,macos,purebasic
